--- a/src/style.css
+++ b/src/style.css
@@ -34,11 +34,12 @@ h1 {
     margin-top: 50px;
     border-radius: 15px;
     max-width: 620px;
+    min-width: 524px;
   }
   
   .temperature {
     font-size: 58px;
-    padding: 5px;
+    padding: 5px 0 auto;
   }
   
   .emoji-image {
@@ -66,4 +67,11 @@ h1 {
   #location-button {
     margin: 0px auto ;
   }
+
+  #fahrenheit,
+  #celsuis {
+    text-decoration: none;
+  }
+  
+
   
